TypedQueryBuilder tests